# mihomo-update

./: .dap.lua  .gitignore  AGENTS.md  Cargo.toml  Makefile  README-go.md  README.md  README_zh-CN.md  ROADMAP.md  build.rs  go.mod  go.sum  pyproject.toml
.github/workflows/: cd.yml  ci-cd.yml  ci.yml  release.yml
.zed/: debug.json
cmd/mihomo-update/: main.go
cmd/playground/: main.go
configs/: config.example.yaml
internal/args/: args.go
internal/cli/: command.go
internal/config/: config.go
internal/errors/: errors.go
internal/helper/: cache.go  http.go  io.go  merge.go  merge_test.go  yaml.go
internal/http/: client.go
internal/merge/: strategy.go
internal/run/: run.go
locales/: TODO.yml  app.yml
pkg/types/: types.go
src/: args.rs  errors.rs  helper.rs  main.rs  run.rs  tests.rs
src/mihomo-updater/: cli.py
src/mihomo_update/: cli.py  error.py  helper.py  i18n.py
src/mihomo_update/locale/en/LC_MESSAGES/: mihomo_update.mo  mihomo_update.po
src/mihomo_update/locale/zh_CN/LC_MESSAGES/: mihomo_update.mo  mihomo_update.po
