[package]
name = "mihomo-update"
version = "0.1.0"
edition = "2024"

[package.metadata.i18n]
available-locales = ["en", "zh-CN"]

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
reqwest = "0.13.2"
rust-i18n = "3.1.5"
serde = "1.0.228"
serde_yml = "0.0.12"
tokio = { version = "1.50.0", features = ["full"] }
