[package]
name = "mihomo-update"
version = "1.1.0+rust"
edition = "2024"

[package.metadata.i18n]
available-locales = ["en", "zh-CN"]

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.5.60", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["socks"] }
rust-i18n = "3.1.5"
serde = "1.0.228"
serde_yml = "0.0.12"
tokio = { version = "1.50.0", features = ["full"] }
